user-skel/ansible/roles/app-unguard/files/repos/unguard/k8s-manifests/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unguard-ingress
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/part-of: unguard
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - http:
        paths:
          # the ordering of these endpoints is important because
          # the AWS ALB will redirect the first route that matches
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unguard-envoy-proxy
                port:
                  number: 8080
